2008-03-08 Brian Matherly <brian@gramps-project.org>
	* src/docgen/PdfDoc.py: 
	0001917: UI font gets small when creating PDF documents.

2008-03-08 Brian Matherly <brian@gramps-project.org>
	* src/gen/lib/note.py:
	* src/Editors/_EditNote.py:
	* src/DisplayModels/_NoteModel.py:
	0001863: <gramps> tags in notes, consistency. This should be in all 
	notes or only in the ones that have markup
	Markup has been disabled for notes. A new strategy is being worked
	on to allow styles for notes.

2008-03-08  Douglas S. Blank  <dblank@saliva.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletWindow.close): 
	fixed issue with reattaching detached gramplet after a col change

2008-03-08  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletWindow.close): 
	Fixed issue exhibited on Windows with buttons becoming dead

2008-03-07 Peter Landgren <peter.talken@telia.com>
	* src/plgins/NotRelated.py: Issue #1795 author information update
	* src/plgins/rel_sv.py: Fixed issues #1881 and 1910

2008-03-05 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/data/Makefile.am: add new css files and delete old ones.
	* src/images/Makefile.am: add new images for Narrative web report
	0001912: make fails 

2008-03-07  Benny Malengier <benny.malengier@gramps-project.org>
	* src/const.py.in : new const for third party plugin page
	* src/ViewManager.py: in help, menu option for the third party plugins

2008-03-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/QuickReports.py: optionally pass in kwargs
	* src/plugins/DefaultGramplets.py: added generation summary to pedigree
	* src/plugins/FilterByName.py: new filter "people by list"
	* src/DataViews/GrampletView.py: handle "people by list" links

2008-03-07  Peter Landgren  <peter.talken@telia.com>
    * src/GrampsCfg.py
    * src/Config/_GrampsConfigKeys.py
    * data/gramps.schemas.in
    Removal of xml-autobackup issue #1897

2008-03-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>